# taskfast-sdk

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  biome.json  deny.toml  dist-workspace.toml  package.json  pnpm-lock.yaml  release-plz.toml  tsconfig.base.json  typos.toml  vitest.config.ts
.beads/: metadata.json
.githooks/: commit-msg  install.sh  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: bump.yml  ci.yml  docker.yml  release-plz.yml  release.yml  sbom.yml  skill-validate.yml  wiki-sync.yml
client-skills/taskfast-agent/: SKILL.md
client-skills/taskfast-agent/reference/: API.md  BOOT.md  POSTER.md  SETUP.md  STATES.md  TROUBLESHOOTING.md  WORKER.md
client-skills/taskfast-agent/scripts/: init.sh  install.sh  post-task  webhook-setup.sh
crates/taskfast-agent/: Cargo.toml
crates/taskfast-agent/src/: bootstrap.rs  chain.rs  events.rs  faucet.rs  keystore.rs  lib.rs  poster.rs  retry.rs  signing.rs  tempo_rpc.rs  wallet.rs  webhooks.rs
crates/taskfast-agent/tests/: bootstrap.rs  events.rs  poster.rs  wallet.rs  webhooks.rs
crates/taskfast-chains/src/tempo/: mod.rs
crates/taskfast-cli/: Cargo.toml
crates/taskfast-cli/examples/: escrow_probe.rs
crates/taskfast-cli/src/: config.rs  dotenv.rs  envelope.rs  exit.rs  lib.rs  main.rs  wallet_lock.rs
crates/taskfast-cli/src/cmd/: bid.rs  config.rs  escrow.rs  events.rs  init.rs  init_tui.rs  mod.rs  ping.rs  post.rs  settle.rs  skills.rs  task.rs  wallet_args.rs  webhook.rs
crates/taskfast-cli/src/cmd/events/: ack.rs  mod.rs  poll.rs  schema.rs  stream.rs
crates/taskfast-cli/tests/: artifact.rs  bid.rs  config.rs  discover.rs  escrow.rs  events.rs  init.rs  init_tui.rs  me.rs  message.rs  ping.rs  post.rs  review.rs  settle.rs  simple_wrappers.rs  task.rs  webhook.rs
crates/taskfast-client/: Cargo.toml  build.rs
crates/taskfast-client/src/: client.rs  errors.rs  lib.rs  retry.rs
crates/taskfast-client/tests/: auth_and_error_mapping.rs  codegen_smoke.rs
docs/: NETWORK.md  PUBLISHING_SKILL.md
evaluation/skill-taskfast-agent/: README.md  eval_cases.jsonl  program.md  requirements.txt  results.tsv  run_eval.py  score.py
evaluation/skill-taskfast-agent/baseline_skill/: SKILL.md
evaluation/skill-taskfast-agent/baseline_skill/reference/: BOOT.md  TROUBLESHOOTING.md  WORKER.md
evaluation/skill-taskfast-agent/traces/: 1776867583-3055b2.json  1776867825-b05640.json  1776867965-752760.json  1776868100-2965bd.json  1776868391-6809ee.json  1776868688-81338f.json  1776868863-9b58fc.json  1776869141-34b05d.json  1776869340-bee557.json  1776869499-e52435.json  1776869941-f270c6.json  1776870107-4c3f29.json  1776870272-aa1592.json  1776870555-5e0a45.json  1776870672-4e8f05.json  1776870779-41f653.json  1776870992-bb2f09.json  1776871139-b4d37d.json  1776871275-28f970.json  1776871714-121b8a.json  1776871836-7b5ecd.json  1777464033-05d089.json  1777464163-006b31.json  1777464303-8becb1.json
scripts/: validate-skill.sh
skills/taskfast-agent/: SKILL.md
skills/taskfast-agent/reference/: POSTER.md  SETUP.md  STATES.md  TROUBLESHOOTING.md
spec/: openapi.yaml
wiki/: Agent-Bootstrap.md  Agent-Owner-Setup.md  Agent-Poster-Loop.md  Agent-Skill-Overview.md  Agent-State-Machines.md  Agent-Troubleshooting.md  Agent-Worker-Loop.md  Command-Reference.md  Home.md  Installation.md  Network-Configuration.md
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
