[workspace]
resolver = "2"
members = [
    "crates/taskfast-client",
    "crates/taskfast-chains",
    "crates/taskfast-agent",
    "crates/taskfast-cli",
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Akuja Inc. <onyekwelu+taskfast@obukwelu.com>"]
homepage = "https://github.com/Akuja-Inc/taskfast-cli"
repository = "https://github.com/Akuja-Inc/taskfast-cli"
documentation = "https://docs.rs/taskfast-cli"
readme = "README.md"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }

alloy-primitives = "1"
alloy-signer = "1"
alloy-signer-local = { version = "1", features = ["keystore"] }
alloy-sol-types = "1"
alloy-consensus = "1"
alloy-eips = "1"
rand = "0.8"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

taskfast-client = { path = "crates/taskfast-client", version = "0.3.0" }
taskfast-chains = { path = "crates/taskfast-chains", version = "0.1.0", default-features = false }
taskfast-agent = { path = "crates/taskfast-agent", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints we deliberately tolerate workspace-wide:
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
unnested_or_patterns = "allow"
needless_raw_string_hashes = "allow"
semicolon_if_nothing_returned = "allow"
doc_lazy_continuation = "allow"
too_many_arguments = "allow"
redundant_closure_for_method_calls = "allow"
match_like_matches_macro = "allow"
single_match_else = "allow"
match_wildcard_for_single_variants = "allow"
needless_for_each = "allow"
manual_let_else = "allow"
single_match = "allow"
from_iter_instead_of_collect = "allow"
uninlined_format_args = "allow"
# Catch stray debugging / unfinished code before it lands.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
