[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Repo automation + shared spec tooling. Binary: `cargo xtask <cmd>`. Library: spec normalizer consumed by taskfast-client/build.rs."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
