[package]
name = "taskfast-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Orchestration library for TaskFast agents: bootstrap, wallet, webhooks, events, signing, keystore."
publish = false

[lints]
workspace = true

[package.metadata.dist]
dist = false

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true }
tracing.workspace = true
futures.workspace = true
taskfast-client = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tempfile = "3"
