[package]
name = "taskfast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "`taskfast` CLI: worker + poster hot-loop operations, JSON-envelope output."

[lints]
workspace = true

[[bin]]
name = "taskfast"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
taskfast-client = { workspace = true }
taskfast-agent = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tempfile = "3"
