[package]
name = "taskfast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "`taskfast` CLI: worker + poster hot-loop operations, JSON-envelope output."
keywords = ["cli", "taskfast", "agent", "automation", "web3"]
categories = ["command-line-utilities", "api-bindings"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "taskfast"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dialoguer.workspace = true
taskfast-client = { workspace = true }
taskfast-chains = { workspace = true, features = ["tempo"] }
taskfast-agent = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
fs4 = { version = "0.13", features = ["sync"] }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid.workspace = true
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
humantime = "2"
rust_decimal = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tempfile = "3"
